Vista de noticia individual

--- a/backend/templates/view.html
+++ b/backend/templates/view.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div id="noticias"></div>
-    <!-- ACA DEBERIA VERSE UNA NOTICIA PERO NO SE PUEDEN ENVIAR LOS PARAMETROS CON LA URL DEL FRONT -->
-    <script src="view.js"></script>
+    {{respuesta|safe}}
+    <!-- <script src="view.js"></script> -->
+    <button><a href="/news.html">Volver</a></button>
 </body>
 </html>
