--- a/backend/templates/view.html
+++ b/backend/templates/view.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias</title>
+    <title>{{respuesta.titulo}}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div id="noticias"></div>
-    {{respuesta|safe}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div id="noticias" class="container text-center mt-4">
+        {{respuesta.noticia|safe}}
+        <a class="btn btn-primary mx-2" href="/news.html">Volver</a>
+    </div>
     <!-- <script src="view.js"></script> -->
-    <button><a href="/news.html">Volver</a></button>
 </body>
 </html>
